# Spacebros1

./: .gitignore  .prettierignore  .tmp_activeCave_def.txt  .tmp_after_cavelevel.txt  .tmp_anomaly.txt  .tmp_applyWalls.txt  .tmp_arenaSegments_full.txt  .tmp_asteroid.txt  .tmp_base.txt  .tmp_base_death_block.txt  .tmp_base_destroy2.txt  .tmp_base_respawn_logic.txt  .tmp_base_spawn_block.txt  .tmp_base_update2.txt  .tmp_break_10939.txt  .tmp_break_2721.txt  .tmp_break_4626.txt  .tmp_bucketIndex.txt  .tmp_bullet_wall_check.txt  .tmp_cave_boss.txt  .tmp_cave_boss2.txt  .tmp_cave_boss_arena.txt  .tmp_cave_ctor.txt  .tmp_cave_draw.txt  .tmp_cave_level.txt  .tmp_cave_reset.txt  .tmp_cave_reward_class.txt  .tmp_cave_rewards.txt  .tmp_cave_snip.txt  .tmp_cavecruiser_kill.txt  .tmp_checkWallCollision.txt  .tmp_completeSectorWarp.txt  .tmp_cruiser.txt  .tmp_cruiser_kill.txt  .tmp_draft.txt  .tmp_draft2.txt  .tmp_draw_bossArena.txt  .tmp_draw_calls.txt  .tmp_draw_cave.txt  .tmp_draw_setup.txt  (+91 more)
.claude/: settings.local.json
.claude/skills/: build-release-manager.skill  code-pattern-validator.skill  collision-testing-tool.skill  entity-generator.skill  game-developer.skill  performance-analyzer.skill  upgrade-system-assistant.skill
coverage/: constants.js.html  coverage-final.json  index.html  math.js.html
electron/: main.js  preload.js
mcp-js-validator/: README.md  pyproject.toml
mcp-js-validator/src/mcp_js_validator/: __init__.py  __main__.py  server.py
scripts/: start-electron.js  test-collision.js
skills/: javascript-validator.md
src/js/: index.js  (+7 more)
tests/: setup.js
(+189 files in other folders)
